src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap
---
source: src/tui/app/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
  Switch between LHA approval presets           
                                                
› 1. Read Only (current)  LHA can read files    
  2. Full Access          LHA can edit files    
                                                
  Press enter to confirm or esc to go back
